added heart rate counter that prints and displays value in bpm

--- a/STM32_HeartRateMeter/Debug/makefile
+++ b/STM32_HeartRateMeter/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: Pulsometer.elf secondary-outputs
 
 # Tool invocations
-Pulsometer.elf Pulsometer.map: $(OBJS) $(USER_OBJS) C:\Users\Mateusz\STM32CubeIDE\workspace_1.11.2\Pulsometer\STM32F103RBTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Pulsometer.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\Mateusz\STM32CubeIDE\workspace_1.11.2\Pulsometer\STM32F103RBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Pulsometer.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+Pulsometer.elf Pulsometer.map: $(OBJS) $(USER_OBJS) C:\Users\Mateusz\Desktop\Pulsometr\Pulsometer\STM32_HeartRateMeter\STM32F103RBTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "Pulsometer.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\Mateusz\Desktop\Pulsometr\Pulsometer\STM32_HeartRateMeter\STM32F103RBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Pulsometer.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
